# llama-cpp-rs

./: .gitignore  Cargo.toml  mtp-orchestration.md  mtp.md
examples/: usage.rs
examples/mtp/: Cargo.toml
examples/mtp/src/: helpers.rs  lib.rs  main.rs  session.rs
examples/mtp/tests/: correctness.rs
examples/reranker/src/: main.rs
examples/simple/src/: main.rs
llama-cpp-2/: Cargo.toml
llama-cpp-2/src/: context.rs  lib.rs  llama_backend.rs  llama_batch.rs  log.rs  model.rs  mtmd.rs  mtp_batch.rs  sampling.rs
llama-cpp-2/src/context/: mtp.rs  params.rs  session.rs
llama-cpp-2/src/model/: params.rs
llama-cpp-2/src/model/params/: kv_overrides.rs
llama-cpp-2/tests/: mtp_round_trip.rs  set_sampler.rs  state_seq.rs
llama-cpp-sys-2/: build.rs  wrapper_ext.h
llama-cpp-sys-2/src/: lib.rs
llama-cpp-sys-2/tests/: nextn_symbols.rs  pre_norm_symbols.rs
