[package]
name = "mtp"
version = "0.1.123"
edition = "2021"

[lib]
name = "mtp"
path = "src/lib.rs"

[[bin]]
name = "mtp"
path = "src/main.rs"

[dependencies]
llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.69" }
hf-hub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[lints]
workspace = true
